Release 1.0.0 of EASy-Producer